Logo stretch fixed for safari

--- a/src/assets/scss/custom.scss
+++ b/src/assets/scss/custom.scss
@@ -599,6 +599,7 @@ button{
                     max-width: 100%;
                     margin: 0 auto;
                     height: auto;
+                    width: auto;
                     max-height: 100%;
                 }
                 .remove-img{
